Fixing spacing on skills section

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,9 @@
+*{
+    box-sizing: border-box;
+}
+
+
+
 .fa-github, .fa-linkedin, .fa-phone-square, .fa-envelope-square, .icoPhone{
     color: black;
 }
@@ -18,5 +24,9 @@
 
 .experience-section, ul{
     list-style: none;
-    font-size: 1.3em;
+    font-size: 3vw;
+}
+
+.h1{
+    font-size: 2.5rem;
 }
